--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rita Almeida - Corretora de Imóveis em Petrolina</title>
+    <title>Rita Almeida - Corretora de Imóveis em Petrolina - PE</title>
     <link
       rel="icon"
       type="image/png"
