feat: Insere tag description

--- a/index.html
+++ b/index.html
@@ -15,14 +15,33 @@
     </title>
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="SEO Description" />
+    <meta
+      name="description"
+      content="Corretora de Imóveis em Petrolina - PE."
+    />
     <meta name="keywords" content="SEO Keywords" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="apple-touch-icon" sizes="57x57" href="./src/assets/favicos/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="./src/assets/favicos/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="./src/assets/favicos/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./src/assets/favicos/apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./src/assets/favicos/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./src/assets/favicos/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./src/assets/favicos/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./src/assets/favicos/apple-icon-76x76.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
@@ -54,12 +73,30 @@
       sizes="192x192"
       href="./src/assets/favicos/android-icon-192x192.png"
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicos/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="./src/assets/favicos/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicos/favicon-16x16.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/assets/favicos/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./src/assets/favicos/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/assets/favicos/favicon-16x16.png"
+    />
     <link rel="manifest" href="./src/assets/favicos/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="./src/assets/favicos/ms-icon-144x144.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="./src/assets/favicos/ms-icon-144x144.png"
+    />
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
