feat: Inverte cores de botão de cta da Hero

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="Corretora de Imóveis em Petrolina - PE."
+      content="Rita Almeida Corretora de Imóveis em Petrolina - PE. Aluguel, compras, avaliação e documentação de casas, apartamentos, terrenos e pontos comerciais."
     />
-    <meta name="keywords" content="SEO Keywords" />
+    <meta
+      name="keywords"
+      content="Rita, Rita Almeida, Almeida, Corretora, de, Imóveis, em, Petrolina, PE, aluguel, compras, avaliação e documentação de casas, apartamentos, terrenos e pontos comerciais."
+    />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#ffffff" />
     <link
